force-app/main/default/objects/RS_All_Open_Cases_on_Interaction__mdt/RS_All_Open_Cases_on_Interaction__mdt.object-meta.xml
<CustomObject>
    <label>RS All Open Cases on Interaction</label>
    <pluralLabel>RS All Open Cases on Interactions</pluralLabel>
</CustomObject>