force-app/main/default/objects/RS_All_Open_Cases_on_Interaction__mdt/fields/Account_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Field_Name__c</fullName>
    <label>Account Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>