force-app/main/default/objects/RS_All_Open_Cases_on_Interaction__mdt/fields/Contact_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Field_Name__c</fullName>
    <label>Contact Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>