force-app/main/default/objects/RS_All_Open_Cases_on_Interaction__mdt/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <label>Query</label>
    <type>TextArea</type>
</CustomField>